tests/comp/sem/invalid/unqualified_access_main.mj
class Evil {
	public int test;

	public static void main(String[] args) {
		/*** test = 5; ***/
    }
}
